--- a/css/woocommerce.css
+++ b/css/woocommerce.css
@@ -46,10 +46,6 @@ a.button.alt, input.button.alt, input.submit.alt, button.button.alt {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.75);
   -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s; }
 
-.input-text {
-  max-width: 75px;
-  min-width: 50px; }
-
 select.orderby {
   width: 100%;
   height: 39px;
@@ -181,6 +177,9 @@ table.variations {
     display: inline-block;
     width: auto; }
 
+.wcsc-cart-add-form .input-text {
+  max-width: 75px;
+  min-width: 50px; }
 .wcsc-cart-add-form table.group_table {
   width: 95%;
   max-width: 400px;
@@ -339,9 +338,6 @@ table.variations {
   table.variations {
     margin: 10px 0 20px; }
 
-  .input-text {
-    max-width: 100px; }
-
   form.woocommerce-cart-form td.product-remove a.remove {
     width: 1em;
     padding: 0;
@@ -360,6 +356,8 @@ table.variations {
 
   .wcsc-cart-add-form {
     margin: 20px 0; }
+    .wcsc-cart-add-form .input-text {
+      max-width: 100px; }
     .wcsc-cart-add-form table.group_table {
       max-width: initial;
       margin: 20px 0; }
@@ -506,5 +504,62 @@ table.variations {
     width: 22.5%;
     margin: 0 1%;
     max-width: initial; } }
+/*Account page*/
+.wcsc-toggle {
+  width: 100%;
+  border: #aeaeae 1px solid;
+  color: #222;
+  background-color: #efefef;
+  margin-bottom: 10px;
+  display: block;
+  padding: 10px; }
+  .wcsc-toggle:active, .wcsc-toggle:hover {
+    background-color: white; }
+  .wcsc-toggle .icon-bar {
+    display: block;
+    margin: 4px auto;
+    width: 22px;
+    background-color: #222;
+    height: 2px;
+    border-radius: 1px; }
+
+nav.woocommerce-MyAccount-navigation ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none; }
+  nav.woocommerce-MyAccount-navigation ul li {
+    text-align: center; }
+    nav.woocommerce-MyAccount-navigation ul li a {
+      display: block;
+      margin-bottom: 10px;
+      padding: 10px;
+      border: 1px solid #aeaeae;
+      background-color: #efefef;
+      color: #222; }
+  nav.woocommerce-MyAccount-navigation ul li.is-active a, nav.woocommerce-MyAccount-navigation ul li:hover a {
+    background-color: white; }
+
+@media screen and (min-width: 768px) {
+  .wcsc-toggle {
+    display: none; }
+
+  .wcsc-collapse {
+    display: block; }
+
+  #wcsc_myaccount_wrap {
+    height: initial !important; }
+
+  nav.woocommerce-MyAccount-navigation ul {
+    margin: 20px 0; }
+    nav.woocommerce-MyAccount-navigation ul li {
+      display: inline-block;
+      margin-right: 10px; }
+      nav.woocommerce-MyAccount-navigation ul li a {
+        display: initial;
+        margin: 0; } }
+@media screen and (min-width: 992px) {
+  /*login*/
+  .woocommerce-form-login {
+    max-width: 500px; } }
 
 /*# sourceMappingURL=woocommerce.css.map */
