--- a/css/woocommerce.css
+++ b/css/woocommerce.css
@@ -1,8 +1,35 @@
 @charset "UTF-8";
 /*this is the colors stylesheet*/
-/*generics*/
+/*generics and overrides*/
 span.required {
   color: #a00; }
+
+.woocommerce a.button, .woocommerce input.button, .woocommerce input.submit, .woocommerce button.button {
+  background-color: #efefef;
+  border: 1px solid #aeaeae;
+  color: #222;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-weight: 400;
+  line-height: 1.42857143;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  touch-action: manipulation;
+  -ms-touch-action: manipulation;
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none; }
+  .woocommerce a.button:hover, .woocommerce a.button:active, .woocommerce input.button:hover, .woocommerce input.button:active, .woocommerce input.submit:hover, .woocommerce input.submit:active, .woocommerce button.button:hover, .woocommerce button.button:active {
+    background-color: white; }
+.woocommerce a.button.alt, .woocommerce input.button.alt, .woocommerce input.submit.alt, .woocommerce button.button.alt {
+  background-color: #878ac1;
+  color: white; }
+  .woocommerce a.button.alt:hover, .woocommerce a.button.alt:active, .woocommerce input.button.alt:hover, .woocommerce input.button.alt:active, .woocommerce input.submit.alt:hover, .woocommerce input.submit.alt:active, .woocommerce button.button.alt:hover, .woocommerce button.button.alt:active {
+    background-color: #ced0ff;
+    color: #515151; }
 
 a.button, input.button, input.submit, button.button {
   background-color: #efefef;
@@ -32,6 +59,20 @@ a.button.alt, input.button.alt, input.submit.alt, button.button.alt {
     background-color: #ced0ff;
     color: #515151; }
 
+button.wcsc-toggle.button {
+  width: 100%;
+  margin-bottom: 10px;
+  display: block; }
+  button.wcsc-toggle.button:active, button.wcsc-toggle.button:hover {
+    background-color: white; }
+  button.wcsc-toggle.button .icon-bar {
+    display: block;
+    margin: 4px auto;
+    width: 22px;
+    background-color: #222;
+    height: 2px;
+    border-radius: 1px; }
+
 .input-text, select.orderby {
   width: 100%;
   height: 39px;
@@ -47,18 +88,7 @@ a.button.alt, input.button.alt, input.submit.alt, button.button.alt {
   -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s; }
 
 select.orderby {
-  width: 100%;
-  height: 39px;
-  padding: 6px 12px;
-  font-size: 16px;
-  line-height: 1em;
-  background-color: white;
-  background-image: none;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.75);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.75);
-  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s; }
+  margin-bottom: 5px; }
 
 span.onsale {
   display: block;
@@ -98,6 +128,14 @@ ul.page-numbers {
     ul.page-numbers li span.current {
       background-color: white; }
 
+@media screen and (min-width: 768px) {
+  button.wcsc-toggle.button {
+    display: none; }
+
+  .wcsc-collapse {
+    display: block;
+    height: initial !important; } }
+/*end generics and overrides*/
 /*cart styles*/
 form.woocommerce-cart-form td.product-remove a.remove {
   width: 100%;
@@ -455,7 +493,6 @@ ul.products {
 .wcsc-shop-container .filter-widgets-toggle {
   margin: 10px auto 0; }
 .wcsc-shop-container #filter_widgets_bin {
-  display: none;
   text-align: center; }
   .wcsc-shop-container #filter_widgets_bin ul {
     list-style-type: none;
@@ -492,20 +529,6 @@ ul.products {
     .wcsc-shop-container #filter_widgets_bin .price_slider_wrapper {
       width: 80%; } }
 /*Account page*/
-.wcsc-toggle {
-  width: 100%;
-  margin-bottom: 10px;
-  display: block; }
-  .wcsc-toggle:active, .wcsc-toggle:hover {
-    background-color: white; }
-  .wcsc-toggle .icon-bar {
-    display: block;
-    margin: 4px auto;
-    width: 22px;
-    background-color: #222;
-    height: 2px;
-    border-radius: 1px; }
-
 nav.woocommerce-MyAccount-navigation ul {
   margin: 0;
   padding: 0;
@@ -523,15 +546,6 @@ nav.woocommerce-MyAccount-navigation ul {
     background-color: white; }
 
 @media screen and (min-width: 768px) {
-  .wcsc-toggle {
-    display: none; }
-
-  .wcsc-collapse {
-    display: block; }
-
-  #wcsc_myaccount_wrap {
-    height: initial !important; }
-
   nav.woocommerce-MyAccount-navigation ul {
     margin: 20px 0; }
     nav.woocommerce-MyAccount-navigation ul li {
