account links in site header

--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,14 @@ body {
 .sewchic-header-pink {
   background-color: #fbdedd; }
 
+.sewchic-account-links {
+  width: 100%;
+  text-align: center;
+  padding: 10px 0;
+  z-index: 10; }
+  .sewchic-account-links a {
+    color: #222; }
+
 .sewchic-header-widget-container {
   position: relative;
   text-align: center; }
@@ -78,6 +86,13 @@ body {
 #sewchic-primary-menu {
   font-size: 18px; }
 
+@media screen and (min-width: 992px) {
+  .sewchic-account-links {
+    max-width: 250px;
+    text-align: right;
+    position: absolute;
+    top: 0;
+    right: 0; } }
 /*********************
   HOME PAGE STYLES
 *********************/
