--- a/css/main.css
+++ b/css/main.css
@@ -179,7 +179,8 @@ body {
     padding: 10px 15px;
     position: absolute;
     bottom: 10px;
-    right: 10px; }
+    right: 10px;
+    max-width: 89%; }
 
 .sewchic-copyright {
   text-align: center;
