--- a/css/sass/woocommerce.scss
+++ b/css/sass/woocommerce.scss
@@ -39,7 +39,7 @@ span.required{
     }
 } 
 
-a.button, input.button, input.submit, button.button{
+a.button, input.button, input.submit, button.button, input[type="submit"]{
     background-color: $lighter-grey;
     border: 1px solid $light-grey;
     color:$black;
@@ -90,7 +90,7 @@ button.wcsc-toggle.button{
 }
 
 
-.input-text, select.orderby{
+.input-text, select.orderby, input.search-field{
     width:100%;
     height:39px;
     padding:6px 12px;
@@ -135,6 +135,10 @@ span.onsale{
         font-weight:bold;
         color:$priceGreen;
     }
+}
+
+.woocommerce-Price-amount{
+    color:$priceGreen;
 }
 
 ul.page-numbers{
@@ -808,4 +812,51 @@ nav.woocommerce-MyAccount-navigation{
     }
 }
 
+/*Woocommerce widgets*/
+.wcsc-sidebar{ 
+    ul{
+        list-style-type:none;
+        padding:0;
+        li{
+            img{
+                display:none;
+            }
+            span.reviewer{
+                padding-left:7px;
+            }
+        }
+    }
+    ul.product-categories{
+        ul, li{
+            display: inline;
+        }
+        a{
+            margin-right:5px;
+        }
+    }
+}
 
+.woocommerce-mini-cart__buttons a{
+    display:block;
+    margin-bottom:7px;
+}
+.woocommerce-product-search input[type="submit"]{
+    display:block;
+    margin-top:5px;
+    width:100%;
+}
+
+@media screen and (min-width:992px){
+}
+
+@media screen and (min-width:1200px){
+    .woocommerce-mini-cart__buttons a{
+        display:initial;
+        margin-right:5px;
+    }
+
+    .woocommerce-product-search input[type="submit"]{
+        width:auto;
+    }
+
+}
