--- a/css/woocommerce.css
+++ b/css/woocommerce.css
@@ -31,7 +31,7 @@ span.required {
     background-color: #ced0ff;
     color: #515151; }
 
-a.button, input.button, input.submit, button.button {
+a.button, input.button, input.submit, button.button, input[type="submit"] {
   background-color: #efefef;
   border: 1px solid #aeaeae;
   color: #222;
@@ -49,7 +49,7 @@ a.button, input.button, input.submit, button.button {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none; }
-  a.button:hover, a.button:active, input.button:hover, input.button:active, input.submit:hover, input.submit:active, button.button:hover, button.button:active {
+  a.button:hover, a.button:active, input.button:hover, input.button:active, input.submit:hover, input.submit:active, button.button:hover, button.button:active, input[type="submit"]:hover, input[type="submit"]:active {
     background-color: white; }
 
 a.button.alt, input.button.alt, input.submit.alt, button.button.alt {
@@ -73,7 +73,7 @@ button.wcsc-toggle.button {
     height: 2px;
     border-radius: 1px; }
 
-.input-text, select.orderby {
+.input-text, select.orderby, input.search-field {
   width: 100%;
   height: 39px;
   padding: 6px 12px;
@@ -110,6 +110,9 @@ span.onsale {
   opacity: 0.7; }
 .products .price {
   font-weight: bold;
+  color: #00ae00; }
+
+.woocommerce-Price-amount {
   color: #00ae00; }
 
 ul.page-numbers {
@@ -567,5 +570,34 @@ nav.woocommerce-MyAccount-navigation ul {
   /*login*/
   .woocommerce-form-login {
     max-width: 500px; } }
+/*Woocommerce widgets*/
+.wcsc-sidebar ul {
+  list-style-type: none;
+  padding: 0; }
+  .wcsc-sidebar ul li img {
+    display: none; }
+  .wcsc-sidebar ul li span.reviewer {
+    padding-left: 7px; }
+.wcsc-sidebar ul.product-categories ul, .wcsc-sidebar ul.product-categories li {
+  display: inline; }
+.wcsc-sidebar ul.product-categories a {
+  margin-right: 5px; }
+
+.woocommerce-mini-cart__buttons a {
+  display: block;
+  margin-bottom: 7px; }
+
+.woocommerce-product-search input[type="submit"] {
+  display: block;
+  margin-top: 5px;
+  width: 100%; }
+
+@media screen and (min-width: 1200px) {
+  .woocommerce-mini-cart__buttons a {
+    display: initial;
+    margin-right: 5px; }
+
+  .woocommerce-product-search input[type="submit"] {
+    width: auto; } }
 
 /*# sourceMappingURL=woocommerce.css.map */
