--- a/css/sass/single.scss
+++ b/css/sass/single.scss
@@ -3,7 +3,7 @@
 @import 'colors';
 
 /*HEADER*/
-figure.single-featured-image{
+figure.sewchic-single-featured-image{
     margin:10px 0 20px;
     img{
         width: 100%;
@@ -20,6 +20,22 @@ figure.single-featured-image{
 }
 
 /*CONTENT*/
+figure.alignleft {float:left; margin: 0 1em 1em 0;}
+figure.alignright {
+    float:right; 
+    margin:0 0 1em 1em;
+    figcaption{
+        text-align:right;
+    }
+}
+figure.aligncenter {
+    display: block; 
+    margin-left: auto; 
+    margin-right: auto;
+    figcaption{
+        text-align:center;
+    }
+}
 img.alignright {float:right; margin:0 0 1em 1em}
 img.alignleft {float:left; margin:0 1em 1em 0}
 img.aligncenter {display: block; margin-left: auto; margin-right: auto}
@@ -29,6 +45,20 @@ a img.aligncenter {display: block; margin-left: auto; margin-right: auto}
 
 .content{
 }
+
+
+/***********************
+* POSTS
+***********************/
+.sewchic-post-content{
+    img{
+        width: 100%;
+        height: auto;
+        max-height:100%;
+    }
+}
+
+
 
 /***********************
 * PAGES
